word wrapping to avoid overflow

--- a/src/styles/component.module.css
+++ b/src/styles/component.module.css
@@ -321,6 +321,7 @@ form.resumeForm {
     flex-grow: 1;
     flex-shrink: 0;
     padding: 48px;
+    flex-basis: 50%;
 
     display: flex;
     flex-direction: column;
@@ -333,6 +334,7 @@ form.resumeForm {
     display: flex;
     flex-direction: column;
     gap: 16px;
+    flex-basis: 50%;
 
     color: #222222;
 
@@ -367,7 +369,7 @@ form.resumeForm {
     li {
       display: flex;
       gap: 8px;
-      align-items: center;
+      align-items: start;
     }
 
     img {
@@ -422,6 +424,7 @@ form.resumeForm {
       gap: 16px;
 
       .year {
+        flex-shrink: 0;
         p {
           font-weight: 300;
           text-align: center;
