--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -81,6 +81,7 @@ h1, h2, h3, h4, h5, h6, p {
   margin: 0px;
   font-weight: normal;
   overflow-wrap: break-word;
+  word-break: break-all;
 }
 
 button {
